    the language list in the KDE frontend (LP 528678).
  * Don't try to translate the greeter with the C locale.
  * Don't destroy the main window when the close button is pressed
    (LP: #543775).
  * Properly handle exceptions around opening the release_notes_url file
    in the KDE frontend (LP: #540266).  Hide the label if the release notes
    do not exist.

  [ Colin Watson ]
  * Depend on uboot-mkimage and redboot-tools on armel, and ensure that the
    appropriate one for the subarchitecture is kept installed, so that
    flash-kernel can work properly without network access (LP: #537007).

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 25 Mar 2010 11:15:08 +0000

ubiquity (2.2.8) lucid; urgency=low

  * Set a wallpaper and cursor for the KDE frontend when in only-
    ubiquity mode (LP: #540933, LP: #540339).  Thanks Roman Shtylman!
  * Add a password strength meter (LP: #537995).
  * Modify the install progress window to match the new theme
    (LP: #538411).
  * Don't show the alpha warning in OEM mode when it's disabled.
  * Add translations for the locale's preferred time format and
    respective format string, as imported from gnome-panel
    (LP: #538156).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 24 Mar 2010 23:26:46 +0000

ubiquity (2.2.7) lucid; urgency=low

  [ Evan Dandrea ]
  * Add inactive labels to the user setup page (LP: #537986).
  * Fix KDE frontend's return_to_partitioning function.
  * Fix the KDE frontend's format button on the advanced partitioning
    page.
  * Assign resize_path before its used in the KDE frontend's PartAuto.
  * Set the keymap to a reasonable default when leaving the greeter
    (LP: #539255).
  * Change the timezone highlight around UTC+5, UTC+5.5, and UTC+8
    (LP: #368060).
  * Fix setting the window title when in automatic mode in the KDE
    frontend (LP: #541829).
  * Automatic update of included source packages: grub-installer
    1.49ubuntu8.
  * Update translations from Launchpad.

  [ Mario Limonciello ]