@@ -521,7 +521,8 @@ class Wizard(BaseFrontend):
             self.quit_installer()
         elif not self.get_reboot_seen():
             self.live_installer.hide()
-            if 'UBIQUITY_ONLY' in os.environ:
+            if ('UBIQUITY_ONLY' in os.environ or
+                'UBIQUITY_GREETER' in os.environ):
                 txt = self.get_string('ubiquity/finished_restart_only')
                 self.finished_label.set_label(txt)
                 self.quit_button.hide()
@@ -579,7 +580,6 @@ class Wizard(BaseFrontend):
         elif self.oem_user_config:
             self.live_installer.set_title(self.get_string('oem_user_config_title'))
             self.live_installer.set_icon_name("preferences-system")
-            self.live_installer.window.set_functions(gtk.gdk.FUNC_RESIZE | gtk.gdk.FUNC_MOVE)
             self.quit.hide()
 
         if not 'UBIQUITY_AUTOMATIC' in os.environ:
@@ -628,10 +628,13 @@ class Wizard(BaseFrontend):
         return True
 
     def set_window_hints(self, widget):
-        if 'UBIQUITY_ONLY' in os.environ:
-            # Disable minimise button.
-            widget.window.set_functions(
-                gtk.gdk.FUNC_RESIZE | gtk.gdk.FUNC_MOVE)
+        if (self.oem_user_config or
+            'UBIQUITY_ONLY' in os.environ or
+            'UBIQUITY_GREETER' in os.environ):
+            f = gtk.gdk.FUNC_RESIZE | gtk.gdk.FUNC_MAXIMIZE | gtk.gdk.FUNC_MOVE
+            if not self.oem_user_config:
+                f |= gtk.gdk.FUNC_CLOSE
+            widget.window.set_functions(f)
 
     def set_locales(self):
         """internationalization config. Use only once."""
